2001-04-23  Morten Welinder  <terra@diku.dk>

	* ms-excel-write.c (ms_excel_check_write): Avoid double free of
 	the list.

2001-04-20  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_read_wsbool) : new function.
	(ms_excel_read_sheet) : called from here.

	* ms-excel-write.c (write_wsbool) : new function.
	(write_sheet_bools) : called from here.

2001-04-19  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-write.c (write_window2) : sigh, when fixing the sizes I did
	  not change the offsets.  I miss C++ in situations like this.
	(ms_excel_check_write) : Free the sheet list.

2001-04-18  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-util.c (excel_iconv_win_codepage) : cleanup and remove
	  warnings in the C locale case.

	* ms-excel-write.c (write_sheet_tail) : split WINDOW2 code out of here
	(write_window2) : and move it here.  Then comment it up and extend the
	  logic.

2001-04-17  Jody Goldberg <jgoldberg@home.com>

	* plugin.xml : Disable the excel97 save method until it potentially
	  does more than screw up.

2001-04-15  Vlad Harchev <hvv@hippo.ru>

        * ms-excel-util.h ms-excel-util.c :
        added framework for doing portable recoding between charsets,
        and also functions for finding appropriate Windows codepage
        for current locale.

        * ms-excel-read.c ms-excel-write.c :
        Properly perform charset conversion for all textual data when doing
        export or import of .xls files.

2001-04-12  Chema Celorio  <chema@celorio.com>

	* boot.c (excel_save): add an env variable so that we can
	enable XL overwrite. the variable is named GNUMERIC_ENABLE_XL_OVERWRITE

2001-04-12  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-write.c (pre_pass) : Don't unref here.

2001-04-12  Morten Welinder  <terra@diku.dk>

	* ms-summary.c (ms_summary_write): Plug leaks.

2001-04-11  Jody Goldberg <jgoldberg@home.com>

	* ms-formula-write.c (write_string) : a null string is not a missing
	  arg.
